fixed header jump due to scroll

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -15,6 +15,7 @@
     height: 100%;
     overflow-y: hidden;
     position: relative;
+    box-sizing: border-box;
 }
 
 .my-content {
@@ -22,6 +23,7 @@
     width: 100%;
     min-height: 100vh;
     position: relative;
+    overflow-x: hidden;
 }
 
 .my-content app-footer {
@@ -36,6 +38,7 @@
     padding: 3rem 0;
     box-sizing: border-box;
     overflow-y: hidden;
+    width: 100vw;
 }
 
 .router-container.toolbar {
