--- a/src/styles.css
+++ b/src/styles.css
@@ -8,6 +8,7 @@ body {
     color: rgb(0, 0, 0, .85);
     background-color: white;
     overflow-y: scroll;
+    margin-left: calc(100vw - 100%);
     font-size: 100%;
 }
 
